# prudentsigma-dashboard

./: .gitignore  .temp_prompt.md  404.html  README.md  about.html  automated_report.py  config.yaml  consulting.html  contact.html  convert_to_docx.py  dashboard.py  drive_utils.py  generate_daily_report.bat  index.html  insights.html  market_data_fetcher.py  newsletter.html  publish_to_web.py  pyproject.toml  requirements.txt  setup_credentials.py  start_dashboard.bat  style.css  tools.html
Web_design/: 404.html  about.html  company-research.html  contact.html  index.html  insights.html  monte-carlo.html  newsletter.html  research-index.json  tools.html
financial_research/: BABA_combined_research_2026-04-04.docx  BIDU_combined_research_2026-04-04.docx  ORCL_deep_research_2026-04-13.docx  PYPL_combined_research_2026-04-04.docx  UUU_deep_research_2026-04-04.docx  generate_baba_combined.py  generate_bidu_combined.py  generate_orcl_dcf.py  generate_orcl_website.py  generate_pypl_combined.py  generate_uuu_report.py
reports/: index.json  report_2026-04-05.html  report_2026-04-06.html  report_2026-04-07.html  report_2026-04-09.html  report_2026-04-10.html  report_2026-04-14.html  report_2026-04-15.html  report_2026-04-17.html  report_2026-04-18.html  report_2026-04-20.html  report_2026-04-22.html  report_2026-04-23.html  report_2026-04-24.html  report_2026-04-27.html  report_2026-04-29.html  report_2026-04-30.html  report_2026-05-01.html  report_2026-05-03.html  report_2026-05-04.html  report_2026-05-05.html  report_2026-05-06.html  report_2026-05-11.html  (+4 more)
(+27 files in other folders)
